changing home to index

--- a/Admission.html
+++ b/Admission.html
@@ -1,132 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admission</title>
-    <link rel="stylesheet" href="admission.css">
+    <link rel="stylesheet" href="./admission.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aoboshi+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
 <body>
-        <header class="head">
-            <img src="images/logo.png" alt="logo" class="logo">
-            <div class="name">
-                <h1 class="acro">CFLC</h1>
-                <p class="def">Christian Foundational Learning Center</p>
-            </div>
-                <nav>
-                    </label>
-                    <ul>
-                        <li><a href="C:\Users\Josiah Luke\source\repos\CFLC Website\Home.html">Home</a></li>
-                        <li><a href="C:\Users\Josiah Luke\source\repos\CFLC Website\About.html">About Us</a></li>
-                        <li><a href="C:\Users\Josiah Luke\source\repos\CFLC Website\Admission.html">Admission</a></li>
-                        <li><a href="C:\Users\Josiah Luke\source\repos\CFLC Website\Contact.html">Contact Us</a></li>
-                    </ul>
-                </nav>   
-        </header>
+    <header class="head">
+        <img src="images/logo.png" alt="logo" class="logo">
+        <div class="name">
+            <h1 class="acro">CFLC</h1>
+            <p class="def">Christian Foundational Learning Center</p>
+        </div>
+        <nav>
+            </label>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./About.html">About Us</a></li>
+                <li><a href="./Admission.html">Admission</a></li>
+                <li><a href="./Contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
     </div>
     <div class="req">
         <h1 class="admit" data-aos="fade-up"> ADMISSION REQUIREMENTS</h1>
-    <div class="container" data-aos="fade-up">
-        <div class="box" id="box1">
-            <h2 class="psp">For Pre-School Pupils</h2>
-            <li class="bc">Birth Certificate<p class="xer">(xerox preferably PSA)</p></li>
-            <li class="enrol">Enrolment Form</li>
-        </div>
-        <div class="box" id="box2">
+        <div class="container" data-aos="fade-up">
+            <div class="box" id="box1">
+                <h2 class="psp">For Pre-School Pupils</h2>
+                <li class="bc">Birth Certificate<p class="xer">(xerox preferably PSA)</p>
+                </li>
+                <li class="enrol">Enrolment Form</li>
+            </div>
+            <div class="box" id="box2">
                 <h2 class="g1p">For Grade 1 Pupils</h2>
                 <li class="eccd">ECCD checklist</li>
                 <li class="prog">Pre-School Progress</li>
                 <li class="rp">Report Card</li>
                 <li class="bert">Birth Certificate</li>
                 <li class="er">Enrolment Form</li>
+            </div>
+            <div class="box" id="box3">
+                <h2 class="trans">For Transferees</h2>
+                <li class="sf9">Report Card/SF 9</li>
+                <li class="gmc">Certificate of Good Moral <p class="char">Character</p>
+                </li>
+                <li class="cert">Birth Certificate<p class="ox">(xerox preferably PSA)</p>
+                </li>
+                <li class="ef">Enrolment Form</li>
+            </div>
         </div>
-        <div class="box" id="box3">
-            <h2 class="trans">For Transferees</h2>
-            <li class="sf9">Report Card/SF 9</li>
-            <li class="gmc">Certificate of Good Moral <p class="char">Character</p></li>
-            <li class="cert">Birth Certificate<p class="ox">(xerox preferably PSA)</p></li>
-            <li class="ef">Enrolment Form</li>
-        </div> 
-    </div>
 
-    <div class="slider-header" data-aos="fade-up">
-        <h1>PROGRAMS OFFERED:</h1>
-    </div>
-    <div class="slider-container" data-aos="fade-up">
-        <div class="slider">
-            <input type="radio" name="slide" id="img1" checked>
-            <input type="radio" name="slide" id="img2">
-            <input type="radio" name="slide" id="img3">
-            <input type="radio" name="slide" id="img4">
-            <input type="radio" name="slide" id="img5">
-            <input type="radio" name="slide" id="img6">
-            <input type="radio" name="slide" id="img7">
-            <input type="radio" name="slide" id="img8">
-            <input type="radio" name="slide" id="img9">
-    
-            <div class="images">
-                <div class="slide">
-                    <img src="images/nurseryL.jpg" alt="Nursery">
+        <div class="slider-header" data-aos="fade-up">
+            <h1>PROGRAMS OFFERED:</h1>
+        </div>
+        <div class="slider-container" data-aos="fade-up">
+            <div class="slider">
+                <input type="radio" name="slide" id="img1" checked>
+                <input type="radio" name="slide" id="img2">
+                <input type="radio" name="slide" id="img3">
+                <input type="radio" name="slide" id="img4">
+                <input type="radio" name="slide" id="img5">
+                <input type="radio" name="slide" id="img6">
+                <input type="radio" name="slide" id="img7">
+                <input type="radio" name="slide" id="img8">
+                <input type="radio" name="slide" id="img9">
+
+                <div class="images">
+                    <div class="slide">
+                        <img src="images/nurseryL.jpg" alt="Nursery">
+                    </div>
+                    <div class="slide">
+                        <img src="images/prekinderL.jpg" alt="Pre-Kinder">
+                    </div>
+                    <div class="slide">
+                        <img src="images/kinderL.jpg" alt="Kinder">
+                    </div>
+                    <div class="slide">
+                        <img src="images/grade1L.jpg" alt="Elementary">
+                    </div>
+                    <div class="slide">
+                        <img src="images/grade2L.jpg" alt="Elementary">
+                    </div>
+                    <div class="slide">
+                        <img src="images/grade3L.jpg" alt="Elementary">
+                    </div>
+                    <div class="slide">
+                        <img src="images/grade4L.jpg" alt="Elementary">
+                    </div>
+                    <div class="slide">
+                        <img src="images/grade5L.jpg" alt="Elementary">
+                    </div>
+                    <div class="slide">
+                        <img src="images/grade6L.jpg" alt="Elementary">
+                    </div>
                 </div>
-                <div class="slide">
-                    <img src="images/prekinderL.jpg" alt="Pre-Kinder">
-                </div>
-                <div class="slide">
-                    <img src="images/kinderL.jpg" alt="Kinder">
-                </div>
-                <div class="slide">
-                    <img src="images/grade1L.jpg" alt="Elementary">
-                </div>
-                <div class="slide">
-                    <img src="images/grade2L.jpg" alt="Elementary">
-                </div>
-                <div class="slide">
-                    <img src="images/grade3L.jpg" alt="Elementary">
-                </div>
-                <div class="slide">
-                    <img src="images/grade4L.jpg" alt="Elementary">
-                </div>
-                <div class="slide">
-                    <img src="images/grade5L.jpg" alt="Elementary">
-                </div>
-                <div class="slide">
-                    <img src="images/grade6L.jpg" alt="Elementary">
+            </div>
+            <div class="dot-container">
+                <div class="dots">
+                    <label for="img1"></label>
+                    <label for="img2"></label>
+                    <label for="img3"></label>
+                    <label for="img4"></label>
+                    <label for="img5"></label>
+                    <label for="img6"></label>
+                    <label for="img7"></label>
+                    <label for="img8"></label>
+                    <label for="img9"></label>
                 </div>
             </div>
         </div>
-        <div class="dot-container">
-            <div class="dots">
-                <label for="img1"></label>
-                <label for="img2"></label>
-                <label for="img3"></label>
-                <label for="img4"></label>
-                <label for="img5"></label>
-                <label for="img6"></label>
-                <label for="img7"></label>
-                <label for="img8"></label>
-                <label for="img9"></label>
-            </div>
+
+        <div class="join">
+            <h1 data-aos="fade-up">JOIN US!</h1>
         </div>
-    </div>    
-        
-    <div class="join" >
-        <h1 data-aos="fade-up">JOIN US!</h1>
-    </div>
 
-    <div class="footer">
-        <p>&copy; 2023 Christian Foundational Learning Center</p>
-    <p>
-    </div>
+        <div class="footer">
+            <p>&copy; 2023 Christian Foundational Learning Center</p>
+            <p>
+        </div>
 
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 
 </body>
+
 </html>
